--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
+								<li><a href="generic.html">玄米的個人簡介 & 由來</a></li>
 								<li><a href="elements.html">Elements</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
@@ -55,24 +55,13 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/玄米貼圖_愛心.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">玄米的貼圖櫃</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">玄米的由來</h2>
+										<p>喜歡喝玄米茶？才不是這麼簡單的原因呢！</p>
+										<a href="generic.html" class="special">Learn more</a>
 									</div>
 								</div>
 							</section>
 
-						<!-- Two -
-							<section id="two" class="wrapper alt spotlight style2">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Tempus adipiscing</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
 
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
